example/secondfile/objects/Apttus_Config2__ProductAttributeValue__c.object
<CustomObject>
    <fields>
        <fullName>ASE_SPEC_CodeFinal__c</fullName>
        <formula>IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL( Class_of_Service_TypeASE__c,&apos;Basic&apos;),
ISPICKVAL( Class_of_ServiceASE__c,&apos;Non-Critical High&apos;),
ISPICKVAL( MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAN1&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL( Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL( Class_of_ServiceASE__c,&apos;Non-Critical High&apos;),
ISPICKVAL( MAC_AddressesASE__c ,&apos;251 - 500&apos;)
),&apos;OEMAN3&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Business Critical - Medium&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAM1&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Business Critical - Medium&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAM3&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Business Critical - High&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAB1&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Business Critical - High&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAB3&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Interactive&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAT1&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Interactive&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAT3&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Real Time&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAR1&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Real Time&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAR3&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Business Data&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAP7&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Business Data&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAP8&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Critical Data&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAP5&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Critical Data&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAP6&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Multimedia Standard&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
),&apos;OEMAP3&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Multimedia Standard&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;)
),&apos;OEMAP4&apos;,IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Multimedia High&apos;),
ISPICKVAL(MAC_AddressesASE__c,&apos;250&apos;)
)
,&apos;OEMAP1&apos;,SPEC_Code_2__c))))))))))))))))
)</formula>
        <label>SPEC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Status__c</fullName>
        <label>ASR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_T_Customer_Site__c</fullName>
        <formula>CASESAFEID(Apttus_Config2__LineItemId__r.AT_T_Customer_Site__c)</formula>
        <label>AT&amp;T Customer Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_T_IP_Flexible_Reach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AT&amp;T IP Flexible Reach Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Catalog_Id__c</fullName>
        <label>Access Catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Speed_AVPN__c</fullName>
        <description>Access Speed for AVPN</description>
        <inlineHelpText>Access Speed AVPN</inlineHelpText>
        <label>Access Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed_AVPN__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3.088 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.632 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6.176 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.720 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9.264 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.808 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12.352 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps</fullName>
                </value>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Speed_Generic__c</fullName>
        <formula>IF(ProductName__c == &apos;AVPN&apos;,TEXT(Access_Speed_AVPN__c), 
IF(ProductName__c == &apos;MIS&apos;||ProductName__c == &apos;AMIS&apos;,TEXT(Access_Speed_MIS__c),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Speed (Generic)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Speed_MIS__c</fullName>
        <description>Access Speed for MIS</description>
        <inlineHelpText>Access Speed MIS</inlineHelpText>
        <label>Access Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed_MIS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps</fullName>
                </value>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type_AVPN__c</fullName>
        <inlineHelpText>Access Type AVPN</inlineHelpText>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Type_AVPN__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type_MIS__c</fullName>
        <label>Access Type [DO NOT USE]</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Type_MIS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <inlineHelpText>Access Type MIS</inlineHelpText>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Type_MIS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_DNS__c</fullName>
        <label>Additional DNS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Access_Price__c</fullName>
        <label>Alternate Access Flat IGLOO Access Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Interface_Code__c</fullName>
        <label>Alternate Access IGLOO Interface Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Access_IGLOO_Interface_Type__c</fullName>
        <formula>IF(Alternate_Access_IGLOO_Interface_Code__c == &apos;1003&apos;, &apos;Electrical - 100 Base TX&apos;, IF( Alternate_Access_IGLOO_Interface_Code__c == &apos;1010&apos;,&apos;Optical Single Mode - 1000 Base LX&apos;, 
IF(Alternate_Access_IGLOO_Interface_Code__c == &apos;1009&apos;, &apos;Optical Multi Mode - 1000 Base SX&apos; , &apos;&apos;)))</formula>
        <label>Alternate Access IGLOO Interface Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic100MbpsASENCCode__c</fullName>
        <formula>IF(
AND(
ISPICKVAL(ServiceType__c,&apos;ASE Basic&apos;),
ISPICKVAL(PortSpeedASE__c,&apos;100 Mbps Port&apos;),
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;VLAN Based&apos;)),
CASE(CIR__c,
&apos;2 Mbps Downstream - 2 Mbps Upstream&apos;,&apos;KQEK&apos;,
&apos;4 Mbps Downstream - 4 Mbps Upstream&apos;,&apos;KQEL&apos;,
&apos;5 Mbps Downstream - 5 Mbps Upstream&apos;,&apos;KQEJ&apos;,
&apos;8 Mbps Downstream - 8 Mbps Upstream&apos;,&apos;KQEM&apos;,
&apos;10 Mbps Downstream - 10 Mbps Upstream&apos;,&apos;KQE1&apos;,
&apos;20 Mbps Downstream - 20 Mbps Upstream&apos;,&apos;KQE2&apos;,
&apos;50 Mbps Downstream - 50 Mbps Upstream&apos;,&apos;KQE5&apos;,
&apos;100 Mbps Downstream - 100 Mbps Upstream&apos;,&apos;KQE-&apos;,&apos;&apos;),IF(
AND(
ISPICKVAL(ServiceType__c,&apos;ASE Basic&apos;),
ISPICKVAL(PortSpeedASE__c,&apos;100 Mbps Port&apos;),
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;Port Based&apos;)),
CASE(CIR__c,
&apos;2 Mbps Downstream - 2 Mbps Upstream&apos;,&apos;KQAJ&apos;,
&apos;4 Mbps Downstream - 4 Mbps Upstream&apos;,&apos;KQAK&apos;,
&apos;5 Mbps Downstream - 5 Mbps Upstream&apos;,&apos;KQAM&apos;,
&apos;8 Mbps Downstream - 8 Mbps Upstream&apos;,&apos;KQAL&apos;,
&apos;10 Mbps Downstream - 10 Mbps Upstream&apos;,&apos;KQA1&apos;,
&apos;20 Mbps Downstream - 20 Mbps Upstream&apos;,&apos;KQA2&apos;,
&apos;50 Mbps Downstream - 50 Mbps Upstream&apos;,&apos;KQA5&apos;,
&apos;100 Mbps Downstream - 100 Mbps Upstream&apos;,&apos;KQA-&apos;,&apos;&apos;),&apos;&apos;))</formula>
        <label>NC Code - Basic 100Mbps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic10GbpsASENCCode__c</fullName>
        <formula>IF(AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),ISPICKVAL(PortSpeedASE__c,&apos;10 Gbps Port&apos;), 
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;VLAN Based&apos;)),
CASE(CIR__c,
&apos;1,000 Mbps Downstream - 1,000 Mbps Upstream&apos;,&apos;KSE1&apos;,
&apos;2,000 Mbps Downstream - 2,000 Mbps Upstream&apos;,&apos;KSE2&apos;,
&apos;2,500 Mbps Downstream - 2,500 Mbps Upstream&apos;,&apos;KSED&apos;,
&apos;4,000 Mbps Downstream - 4,000 Mbps Upstream&apos;,&apos;KSE4&apos;,
&apos;5,000 Mbps Downstream - 5,000 Mbps Upstream&apos;,&apos;KSE5&apos;,
&apos;7,500 Mbps Downstream - 7,500 Mbps Upstream&apos;,&apos;KSEJ&apos;,
&apos;9,500 Mbps Downstream - 9,500 Mbps Upstream&apos;,&apos;KSEL&apos;,
&apos;10,000 Mbps Downstream - 10,000 Mbps Upstream&apos;,&apos;KSE-&apos;,&apos;&apos;),IF(
AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(PortSpeedASE__c,&apos;10 Gbps Port&apos;), 
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;Port Based&apos;)),
CASE(CIR__c,
&apos;1,000 Mbps Downstream - 1,000 Mbps Upstream&apos;,&apos;KSA1&apos;,
&apos;2,000 Mbps Downstream - 2,000 Mbps Upstream&apos;,&apos;KSA2&apos;,
&apos;2,500 Mbps Downstream - 2,500 Mbps Upstream&apos;,&apos;KSAD&apos;,
&apos;4,000 Mbps Downstream - 4,000 Mbps Upstream&apos;,&apos;KSA4&apos;,
&apos;5,000 Mbps Downstream - 5,000 Mbps Upstream&apos;,&apos;KSA5&apos;,
&apos;7,500 Mbps Downstream - 7,500 Mbps Upstream&apos;,&apos;KSAJ&apos;,
&apos;9,500 Mbps Downstream - 9,500 Mbps Upstream&apos;,&apos;KSAL&apos;,
&apos;10,000 Mbps Downstream - 10,000 Mbps Upstream&apos;,&apos;KSA-&apos;,&apos;&apos;),&apos;&apos;))</formula>
        <label>NC Code -  Basic 10Gbps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic1GbpsASENCCode__c</fullName>
        <formula>IF(
AND(
ISPICKVAL(ServiceType__c,&apos;ASE Basic&apos;),
ISPICKVAL(PortSpeedASE__c,&apos;1 Gbps Port&apos;),
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;VLAN Based&apos;)),
CASE(CIR__c,
&apos;2 Mbps Downstream - 2 Mbps Upstream&apos;,&apos;	KRF2&apos;,
&apos;4 Mbps Downstream - 4 Mbps Upstream&apos;,&apos;	KRF4&apos;,
&apos;5 Mbps Downstream - 5 Mbps Upstream&apos;,&apos;	KRFA&apos;,
&apos;8 Mbps Downstream - 8 Mbps Upstream&apos;,&apos;	KRF8&apos;,
&apos;10 Mbps Downstream - 10 Mbps Upstream&apos;,&apos;KRFB&apos;,
&apos;20 Mbps Downstream - 20 Mbps Upstream&apos;,&apos;KRFD&apos;,
&apos;50 Mbps Downstream - 50 Mbps Upstream&apos;,&apos;KRFJ&apos;,
&apos;100 Mbps Downstream - 100 Mbps Upstream&apos;,&apos;KRE1&apos;,
&apos;150 Mbps Downstream - 150 Mbps Upstream&apos;,&apos;KREB&apos;,
&apos;250 Mbps Downstream - 250 Mbps Upstream&apos;,&apos;KREA&apos;,
&apos;400 Mbps Downstream - 400 Mbps Upstream&apos;,&apos;KRE4&apos;,
&apos;500 Mbps Downstream - 500 Mbps Upstream&apos;,&apos;KRE5&apos;,
&apos;600 Mbps Downstream - 600 Mbps Upstream&apos;,&apos;KRE6&apos;,
&apos;1,000 Mbps Downstream - 1,000 Mbps Upstream&apos;,&apos;KRE0&apos;,&apos;&apos;),IF(
AND(
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;),
ISPICKVAL(PortSpeedASE__c,&apos;1 Gbps Port&apos;),
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;Port Based&apos;)),
CASE(CIR__c,
&apos;2 Mbps Downstream - 2 Mbps Upstream&apos;,&apos;KRB2&apos;,
&apos;4 Mbps Downstream - 4 Mbps Upstream&apos;,&apos;KRB4&apos;,
&apos;5 Mbps Downstream - 5 Mbps Upstream&apos;,&apos;KRBA&apos;,
&apos;8 Mbps Downstream - 8 Mbps Upstream&apos;,&apos;KRB8&apos;,
&apos;10 Mbps Downstream - 10 Mbps Upstream&apos;,&apos;KRBB&apos;,
&apos;20 Mbps Downstream - 20 Mbps Upstream&apos;,&apos;KRBD&apos;,
&apos;50 Mbps Downstream - 50 Mbps Upstream&apos;,&apos;KRBJ&apos;,
&apos;100 Mbps Downstream - 100 Mbps Upstream&apos;,&apos;KRA1&apos;,
&apos;150 Mbps Downstream - 150 Mbps Upstream&apos;,&apos;KRAB&apos;,
&apos;250 Mbps Downstream - 250 Mbps Upstream&apos;,&apos;KRAA&apos;,
&apos;400 Mbps Downstream - 400 Mbps Upstream&apos;,&apos;KRA4&apos;,
&apos;500 Mbps Downstream - 500 Mbps Upstream&apos;,&apos;KRA5&apos;,
&apos;600 Mbps Downstream - 600 Mbps Upstream&apos;,&apos;KRA6&apos;,
&apos;1,000 Mbps Downstream - 1,000 Mbps Upstream&apos;,&apos;KRA0&apos;,&apos;&apos;),&apos;&apos;))</formula>
        <label>NC Code -  Basic 1Gbps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_MACD_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block MACD Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broadband1GbpsASENCCode__c</fullName>
        <formula>IF(AND( 
ISPICKVAL(ServiceType__c, &apos;ASE Broadband&apos;), 
ISPICKVAL(PortSpeedASE__c,&apos;1 Gbps Port&apos;), 
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;VLAN Based&apos;)), 
CASE(CIR__c, 
&apos;3 Mbps Downstream - 1 Mbps Upstream&apos;,&apos;KRGA&apos;, 
&apos;6 Mbps Downstream - 1 Mbps Upstream&apos;,&apos;KRGB&apos;, 
&apos;12 Mbps Downstream - 1.5 Mbps Upstream&apos;,&apos;KRGC&apos;, 
&apos;18 Mbps Downstream - 1.5 Mbps Upstream&apos;,&apos;KRGD&apos;, 
&apos;24 Mbps downstream - 3 Mbps upstream&apos;,&apos;KRGE&apos;, 
&apos;45 Mbps downstream - 6 Mbps upstream&apos;,&apos;KRGF&apos;, 
&apos;2 Mbps Downstream - 2 Mbps Upstream&apos;,&apos;KRG2&apos;, 
&apos;4 Mbps Downstream - 4 Mbps Upstream&apos;,&apos;KRG4&apos; 
,&apos;&apos;),IF( 
AND( 
ISPICKVAL(ServiceType__c, &apos;ASE Broadband&apos;), 
ISPICKVAL(PortSpeedASE__c,&apos;1 Gbps Port&apos;), 
ISPICKVAL(Port_VLAN_BasedASE__c,&apos;Port Based&apos;)), 
CASE(CIR__c, 
&apos;3 Mbps Downstream - 1 Mbps Upstream&apos;,&apos;KRJA&apos;, 
&apos;6 Mbps Downstream - 1 Mbps Upstream&apos;,&apos;KRJB&apos;, 
&apos;12 Mbps Downstream - 1.5 Mbps Upstream&apos;,&apos;KRJC&apos;, 
&apos;18 Mbps Downstream - 1.5 Mbps Upstream&apos;,&apos;KRJD&apos;, 
&apos;24 Mbps downstream - 3 Mbps upstream&apos;,&apos;KRJE&apos;, 
&apos;45 Mbps downstream - 6 Mbps upstream&apos;,&apos;KRJF&apos;, 
&apos;2 Mbps Downstream - 2 Mbps Upstream&apos;,&apos;KRJ2&apos;, 
&apos;4 Mbps Downstream - 4 Mbps Upstream&apos;,&apos;KRJ4&apos;,&apos;&apos;),&apos;&apos;))</formula>
        <label>NC Code - Broadband 1Gbps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadband_Suffix__c</fullName>
        <label>Broadband Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIR__c</fullName>
        <label>Committed Information Rate (CIR)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PortSpeedASE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2 Mbps Downstream - 2 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>4 Mbps Downstream - 4 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>5 Mbps Downstream - 5 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>8 Mbps Downstream - 8 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>10 Mbps Downstream - 10 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>3 Mbps Downstream - 1 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>6 Mbps Downstream - 1 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>12 Mbps Downstream - 1.5 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>18 Mbps Downstream - 1.5 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>24 Mbps Downstream - 3 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>45 Mbps Downstream - 6 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>20 Mbps Downstream - 20 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>50 Mbps Downstream - 50 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>100 Mbps Downstream - 100 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>150 Mbps Downstream - 150 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>250 Mbps Downstream - 250 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>400 Mbps Downstream - 400 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>500 Mbps Downstream - 500 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>600 Mbps Downstream - 600 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>1,000 Mbps Downstream - 1,000 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>2,000 Mbps Downstream - 2,000 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>2,500 Mbps Downstream - 2,500 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>4,000 Mbps Downstream - 4,000 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>5,000 Mbps Downstream - 5,000 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>7,500 Mbps Downstream - 7,500 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>9,500 Mbps Downstream - 9,500 Mbps Upstream</fullName>
                </value>
                <value>
                    <fullName>10,000 Mbps Downstream - 10,000 Mbps Upstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNUM_Rate_Card__c</fullName>
        <label>CNUM Rate Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_catalog_Id__c</fullName>
        <label>COS catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_ServiceASE__c</fullName>
        <label>Class of Service (CoS)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class_of_Service_TypeASE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Critical High</fullName>
                </value>
                <value>
                    <fullName>Business Critical - Medium</fullName>
                </value>
                <value>
                    <fullName>Real Time</fullName>
                </value>
                <value>
                    <fullName>Business Data</fullName>
                </value>
                <value>
                    <fullName>Critical Data</fullName>
                </value>
                <value>
                    <fullName>Multimedia High</fullName>
                </value>
                <value>
                    <fullName>Broadband Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_of_Service_TypeASE__c</fullName>
        <label>Class of Service (CoS) Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>PPCoS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concurrent_Calls__c</fullName>
        <label>How many Concurrent Calls?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_TypeASE__c</fullName>
        <label>Config Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Point To Point</fullName>
                </value>
                <value>
                    <fullName>Multi Point</fullName>
                </value>
                <value>
                    <fullName>Hub &amp; Spoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consume_for_Use_Fan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consume for Use Fan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractRenewal_Access_Price__c</fullName>
        <label>ContractRenewal Access Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractRenewal_IglooError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContractRenewal IglooError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number (CNUM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNS_catalog_Id__c</fullName>
        <label>DNS catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Listing_Phone_Number__c</fullName>
        <label>Directory Listing Phone Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Customer_FAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Customer FAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethernet_Configuration__c</fullName>
        <label>Ethernet Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet Private Line (Point-to-Point)</fullName>
                </value>
                <value>
                    <fullName>Ethernet Virtual Private Line (Hub-and-Spoke)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Choice_AT_T_Data_Center__c</fullName>
        <description>First Choice AT&amp;T Data Center</description>
        <inlineHelpText>First Choice AT&amp;T Data Center</inlineHelpText>
        <label>First Choice AT&amp;T Data Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta - Lithia Springs</fullName>
                </value>
                <value>
                    <fullName>Boston - Watertown</fullName>
                </value>
                <value>
                    <fullName>Chicago - Lisle</fullName>
                </value>
                <value>
                    <fullName>Dallas - Allen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles - Hawthrone</fullName>
                </value>
                <value>
                    <fullName>Los Angeles - Irvine</fullName>
                </value>
                <value>
                    <fullName>NY Metro - Secaucus</fullName>
                </value>
                <value>
                    <fullName>NY Metro - Piscataway</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Seattle - Lynnwood</fullName>
                </value>
                <value>
                    <fullName>Washington DC - Ashburn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hi_Cap_Flex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hi-Cap Flex with MBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hi_cap_Flex_catalog_Id__c</fullName>
        <label>Hi-cap Flex catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGLOO_Access_Speed_Substituted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGLOO Access Speed Substituted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGLOO_Call_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGLOO Call Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGLOO_Interface_Type_Substituted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGLOO Interface Type Substituted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGLOO_Old_Access_Speed__c</fullName>
        <label>IGLOO Old Access Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGLOO_Old_Interface_Type__c</fullName>
        <label>IGLOO Old Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGLOO_Old_Port_Speed__c</fullName>
        <label>IGLOO Old Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGLOO_Port_Speed_Substituted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGLOO Port Speed Substituted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGLOO_Retrial_Failure_Count__c</fullName>
        <label>IGLOO Retrial Failure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGLOO_Speed_Unavailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGLOO Speed Unavailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGLOO_Supplier_Name__c</fullName>
        <label>IGLOO Supplier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFlex_catalog_Id__c</fullName>
        <label>IPFlex catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Flex_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Flex Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Flexible_Reach_Plan__c</fullName>
        <label>Select IP Flexible Reach Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan A</fullName>
                </value>
                <value>
                    <fullName>Plan B</fullName>
                </value>
                <value>
                    <fullName>Plan C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Igloo_Access_Price__c</fullName>
        <label>Igloo Discounted Access Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Igloo_Call_Processing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Igloo Call Processing Complete</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>